--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "client-react"]
 	path = client-react
 	url = git@github.com:designsbysm/word-clock-client-react.git
+[submodule "server-node"]
+	path = server-node
+	url = git@github.com:designsbysm/word-clock-node.git
